spacing issue fixed

--- a/sass/partials/_content.scss
+++ b/sass/partials/_content.scss
@@ -488,7 +488,7 @@
     .challenge-courts {   
         display: flex;
         flex-flow: column;
-        gap: 1rem;
+        // gap: 1rem;
         border-bottom-left-radius: 20px;
         border-bottom-right-radius: 20px;
 
